syntax = "proto3";
option java_multiple_files = true;
package ljworker;

message StartRequest {
    repeated string args = 1;
}

message StartResponse {
    repeated string output = 1;
}

message StopRequest {
}

message StopResponse {
}

message StatusRequest {
}

message StatusResponse {
}

message ListRequest {
}

message ListResponse {
    message JobData {
        int32 id = 1;
        string status = 2;
        repeated string args = 3;
    }
    repeated JobData jobData = 1;
}

message HealthCheckRequest {
}

message HealthCheckResponse {
    string status = 1;
}

service LinuxJobService {
    rpc start(StartRequest) returns (StartResponse);
    rpc startStream(StartRequest) returns (stream StartResponse);
    rpc stop(StopRequest) returns (StopResponse);
    rpc status(StatusRequest) returns (StatusResponse);
    rpc list(ListRequest) returns (ListResponse);
    rpc healthCheck(HealthCheckRequest) returns (HealthCheckResponse);
}

